--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="item col-sm-4">
           <div class="img" style="background-image: url('./img/seungmoon_choi.jpg')"></div>
           <p class="name">Seungmoon Choi</p>
-          <p class="lab-name"><a href="http://hvr.postech.ac.kr/" target="_blank">Haptics and Virtual Reality Laboratory</a><img class="icon" src="./img/link.png"></p>
+          <p class="lab-name"><a href="http://interaction.postech.ac.kr/" target="_blank">Interaction Laboratory</a><img class="icon" src="./img/link.png"></p>
         </div>
         <div class="item col-sm-4">
           <div class="img" style="background-image: url('./img/soohee_han.jpg')"></div>
