--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="item col-sm-4">
           <div class="img" style="background-image: url('./img/taehyun_oh.jpg')"></div>
           <p class="name">Tae-Hyun Oh</p>
-          <p class="lab-name"><a href="https://mi.postech.ac.kr/" target="_blank">Machine Intelligence Laboratory</a><img class="icon" src="./img/link.png"></p>
+          <p class="lab-name"><a href="https://mi.postech.ac.kr/" target="_blank">Algorithmic Machine Intelligence Laboratory</a><img class="icon" src="./img/link.png"></p>
         </div>
         <div class="item col-sm-4">
           <div class="img" style="background-image: url('./img/jungseul_ok.jpg')"></div>
